--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">MySunshine</string>
+    <string name="app_name">MySun</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hello world! 007</string>
     <string name="action_settings">Settings</string>
 </resources>
