--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,18 @@
 <resources>
+    <!--
+       Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
+       It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
+       or something similar.
+  -->
     <string name="app_name">MySun</string>
 
-    <string name="hello_world">Hello world! 007</string>
+    <!--
+         By convention, "action" denotes that this String will be used as the label for an Action,
+         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
+    -->
     <string name="action_settings">Settings</string>
+
+    <!-- Menu label to fetch updated weather info from the server -->
+    <string name="action_refresh" translatable="false">Refresh</string>
+    <string name="hello_world">Hello world! 008</string>
 </resources>
